XWIKI-21971: No options when using LiveData with a LevelsClass column
  * Minor fixes after review